# wgpu-engine

./: Cargo.toml  animations.md  notes.md
src/: lib.rs  main.rs  skinned_shader.wgsl  static_shader.wgsl
src/animation/: animation.rs  mod.rs
src/animation/test/: mod.rs  rigid_tests.rs
src/app/: app.rs  app_config.rs  app_state.rs  mod.rs  renderer.rs
src/app/render/: arena.rs  mod.rs  opaque_pass.rs  render_group.rs  renderer.rs  renderer_vm.rs
src/app/renderer/: free_list.rs  mod.rs  pipeline.rs  renderer.rs  vertex_arena.rs  vm.rs
src/app/renderer_new/: free_list.rs  mod.rs  pipeline.rs  renderer_new.rs  vertex_arena.rs  vm.rs
src/asset_manager/: asset_builder_new.rs  asset_manager.rs  asset_manager_new.rs  mod.rs  model_builder.rs  primitive.rs  range_splicer.rs
src/asset_manager/gltf_asset/: animation.rs  build.rs  load.rs  loader.rs  mesh.rs  mod.rs  primitive.rs  upload.rs  util.rs
src/asset_manager/gltf_assets/: gltf_model.rs  mesh.rs  mod.rs  model_builder.rs  model_builder_new.rs  primitive.rs
src/asset_manager/gltf_loader/: loader.rs  mod.rs
src/asset_manager_new/: asset_manager_new.rs  mod.rs  test_refactor.rs
src/asset_manager_new/gltf/: build.rs  loader.rs  mesh.rs  mod.rs
src/asset_manager_new/gltf_asset/: build.rs  loader.rs  mod.rs
src/tests/: main_tests.rs  mod.rs
src/util/: mod.rs  pipeline.rs  primitive.rs  types.rs
src/world/: camera.rs  components.rs  entity_manager.rs  entity_upload_query.rs  index_arena.rs  index_arena_new.rs  instance_arena.rs  instance_manager.rs  load_queue.rs  mod.rs  scene.rs  world.rs
(+8 files in other folders)
