[package]
name = "engine_2"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
bytemuck = {version =  "1.24.0", features = ["derive", "min_const_generics"] }
cgmath = "0.18.0"
gltf = "1.4.1"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }
pollster = "0.4.0"
time = "0.3.44"
wgpu = "28.0.0"
winit = {version =  "0.30.12", features = ["rwh_06"] }
base64 = "0.22.1"
rand = "0.9.2"

[dependencies.bitflags]
version = "2.11.1"
features = ["bytemuck"]

